# cpphibernate

./: .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
cmake/: Findcppmariadb.cmake  Findcpputils.cmake  Findmariadb.cmake  options.cmake  options.h.in
include/: cpphibernate.h
include/cpphibernate/: config.h  context.h  misc.h  modifier.h  schema.h  types.h
include/cpphibernate/driver/: mariadb.h
include/cpphibernate/driver/mariadb/: helper.h  impl.h  mariadb.h  schema.h
include/cpphibernate/driver/mariadb/helper/: context.h  context.inl  key_properties.h  reference_stack.h  transaction_lock.h  type_properties.h
include/cpphibernate/driver/mariadb/impl/: create.h  create_update.h  destroy.h  init.h  limit.h  modifier_tags.h  order_by.h  read.h  where.h
include/cpphibernate/driver/mariadb/schema/: attributes.fwd.h  attributes.h  attributes.inl  field.fwd.h  field.h  field.inl  fields.fwd.h  fields.h  fields.inl  filter.fwd.h  filter.h  filter.inl  schema.fwd.h  schema.h  schema.inl  table.fwd.h  table.h  table.inl  tables.fwd.h  tables.h  tables.inl
include/cpphibernate/misc/: container_helper.h  general.h  meta.h  nullable_helper.h  print.h  wrap.h
include/cpphibernate/modifier/: limit.h  modifier.h  modifiers.h  offset.h  order_by.h  where.h
include/cpphibernate/modifier/where/: clauses.h  where.h
include/cpphibernate/modifier/where/clauses/: and.h  clause.h  equal.h  not.h  or.h
include/cpphibernate/schema/: attribute.h  attributes.h  field.h  fields.h  getter.h  macros.h  print.h  schema.h  setter.h  table.h  tables.h
src/: CMakeLists.txt  types.cpp
src/cpphibernate/: types.cpp
src/cpphibernate/driver/mariadb/schema/: field.cpp  schema.cpp  table.cpp
src/driver/mariadb/schema/: field.cpp  filter.cpp  schema.cpp  table.cpp
test/: CMakeLists.txt  cpphibernate.cpp  cpphibernate_create.cpp  cpphibernate_destroy.cpp  cpphibernate_init.cpp  cpphibernate_read.cpp  cpphibernate_update.cpp  mariadb_mock.cpp  mariadb_mock.h  test_helper.h  test_schema.h
